--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>piglet</h1>
             <img src="./logo.png" width="200">
             <form class="search-box">
-                <input type="search" placeholder="what do you want to search today?">
+                <input type="search" placeholder="O que deseja pesquisar hoje?">
             </form>
             <p>Resultados : 0</p>
         </header>
