--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div class="container">
         <header>
             <h1>piglet</h1>
+            <h4>Piglet está aqui para pesquisar para você!</h4>
             <img src="./logo.png" width="200">
             <form class="search-box">
-                <input type="search" placeholder="O que deseja pesquisar hoje?">
+                <input type="search" placeholder="O que pesquisar saber  hoje?">
             </form>
             <p>Resultados : 0</p>
         </header>
